[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.10"
protocol = { path = "../protocol" }
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
