[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
bitvec = "1"
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
