[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bitvec = "1.0.1"
protocol = { version = "0.1.0", path = "../protocol" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync"] }
